Bug #42651 "Regression: falcon_bug_22169-big started to fail with error 305" Bug #33177 "Table creation fails after error 305 and tablespace change" Bug #32838 "Falcon; error 1296 : Got error 305 'record memory is exhausted'"

The fix for these bugs is the first of several improvements
to Falcon's memory management (Worklog TBD).

Falcon out-of-memory errors are caused by a combination of things.
Recent improvements to the Scavenger and to the Backlogging subsystem
(Bug#42592) have contributed to the resolution of these bugs, however,
certain operations can still fill the record cache to the point where
scavenging is ineffective.

Scavenging efficiency will be greatly improved by allocating record
data and metadata separately. The record cache now stores only
actual record data, and Record and RecordVersion objects (metadata)
are allocated from separate memory pools.

The metadata memory pools are completely homogeneous, with no memory
fragmentation. The record cache will also be far less fragmented,
because large blocks of record data will no longer be interspersed
with very small blocks of object data.

Decoupling the data and metadata will also greatly reduce the number of
out-of-memory conditions--typically seen during large inserts and
updates--because the memory pools are allowed to grow independently.

These memory pools may flucuate considerably during massive transactions,
depending upon the record makeup and type of operation. This flucuation,
however, serves only to emphasize the value managing these memory pools
separately.

One side-effect of this change is that, while the record cache max size
remains fixed, the record metadata caches can grow unbounded. Although
this is not unprecedented (Falcon's general purpose memory pool has
always been unbounded), one remaining challenge is to ensure that
the Falcon memory manager releases resources back to the system as
soon as possible.