storage/falcon/Database.h
@@ -1,4 +1,4 @@
-/* Copyright © 2006-2008 MySQL AB, 2008-2009 Sun Microsystems, Inc.
+/* Copyright (C) 2006-2008 MySQL AB, 2008-2009 Sun Microsystems, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -61,7 +61,7 @@ static const int OUT_OF_RECORD_MEMORY_RETRIES = 10;
 
 // Milliseconds per iteration to wait for the Scavenger
 
-static const int SCAVENGE_WAIT_MS			  = 20;
+static const int SCAVENGE_WAIT_MS			  = 50;//500;
 
 // Scavenger cycles per call to updateCardinalities()
 
@@ -120,6 +120,7 @@ class IndexKey;
 class InfoTable;
 class TableSpace;
 class MemMgr;
+class MemControl;
 class RecordScavenge;
 class PriorityScheduler;
 class SQLException;
@@ -255,7 +256,7 @@ public:
 	void			setIOError(SQLException* exception);
 	void			clearIOError(void);
 	void			flushWait(void);
-	void			setLowMemory(void);
+	void			setLowMemory(uint64 spaceNeeded);
 	void			clearLowMemory(void);
 
 
@@ -332,7 +333,10 @@ public:
 	volatile INTERLOCK_TYPE	scavengeForced;
 	PageWriter			*pageWriter;
 	PreparedStatement	*updateCardinality;
-	MemMgr				*recordDataPool;
+	MemControl			*recordMemoryControl;
+	MemMgr				*recordDataPool;	// Record data pool (no object metadata)
+	MemMgr				*recordPool;		// Record object pool
+	MemMgr				*recordVersionPool;	// RecordVersion object pool
 	time_t				startTime;
 	
 	volatile int		deltaTime;
@@ -356,6 +360,7 @@ public:
 	uint64				lastGenerationMemory;
 	uint64				lastActiveMemoryChecked;
 	uint64				scavengeCount;
+	uint64				lowMemoryCount;
 	time_t				creationTime;
 	volatile time_t		lastScavenge;
 };
