storage/falcon/RecordScavenge.cpp
@@ -21,6 +21,7 @@
 #include "RecordVersion.h"
 #include "Log.h"
 #include "MemMgr.h"
+#include "MemControl.h"
 #include "Sync.h"
 #include "Transaction.h"
 #include "TransactionManager.h"
@@ -34,7 +35,7 @@ RecordScavenge::RecordScavenge(Database *db, uint64 generation, bool forceScaven
 	veryOldRecords = 0;
 	veryOldRecordSpace = 0;
 
-	startingActiveMemory = database->recordDataPool->activeMemory;
+	startingActiveMemory = database->recordMemoryControl->getCurrentMemory(MemMgrRecordData);
 	prunedActiveMemory = 0;
 	retiredActiveMemory = 0;
 
@@ -239,7 +240,12 @@ Record* RecordScavenge::inventoryRecord(Record* record)
 uint64 RecordScavenge::computeThreshold(uint64 spaceToRetire)
 {
 	uint64 totalSpace = veryOldRecordSpace;
-	scavengeGeneration = 0;
+	scavengeGeneration = baseGeneration;
+	
+	// Don't mess around if memory is critical
+	
+	if (database->lowMemory)
+		return scavengeGeneration;
 
 	// The baseGeneration is the currentGeneration when the scavenge started
 	// It is in ageGroups[0].  Next oldest in ageGroups[1], etc.
@@ -254,10 +260,7 @@ uint64 RecordScavenge::computeThreshold(uint64 spaceToRetire)
 			scavengeGeneration = baseGeneration - n;
 		}
 
-	// We still may want to scavenge even if the age group total is
-	// too small, so use the base generation as a starting point.
-	
-	return (scavengeGeneration ? scavengeGeneration : baseGeneration);
+	return scavengeGeneration;
 }
 
 void RecordScavenge::print(void)
